trunk/OldArchive/ea3c5bb94b6a1a4334b942400ee5155b-efe1289a741771fa61c464bbefe596de/output
main.cpp:5:38: error: invalid operands to binary expression ('std::string' (aka 'basic_string<char>') and 'int')
    std::cout << std::string{"asdf"} + 8;
                                     ^ ~
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2414:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'int')
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2468:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'int')
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/stl_iterator.h:335:5: note: candidate template ignored: could not match 'reverse_iterator<type-parameter-0-0>' against 'int'
    operator+(typename reverse_iterator<_Iterator>::difference_type __n,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/stl_iterator.h:904:5: note: candidate template ignored: could not match '__normal_iterator<type-parameter-0-0, type-parameter-0-1>' against 'int'
    operator+(typename __normal_iterator<_Iterator, _Container>::difference_type
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/stl_iterator.h:1120:5: note: candidate template ignored: could not match 'move_iterator<type-parameter-0-0>' against 'int'
    operator+(typename move_iterator<_Iterator>::difference_type __n,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2361:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'int'
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2398:5: note: candidate template ignored: could not match 'const _CharT *' against 'int'
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2426:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'int'
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2432:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'int'
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2438:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'int'
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2450:5: note: candidate template ignored: could not match 'const _CharT *' against 'std::string' (aka 'basic_string<char>')
    operator+(const _CharT* __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2456:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'int'
    operator+(_CharT __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.h:2462:5: note: candidate template ignored: could not match 'const _CharT *' against 'int'
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.tcc:693:5: note: candidate template ignored: could not match 'const _CharT *' against 'std::string' (aka 'basic_string<char>')
    operator+(const _CharT* __lhs,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.7/../../../../include/c++/4.7/bits/basic_string.tcc:709:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'int'
    operator+(_CharT __lhs, const basic_string<_CharT, _Traits, _Alloc>& __rhs)
    ^
1 error generated.
